--- a/frontend/src/Components/Footer/Footer.css
+++ b/frontend/src/Components/Footer/Footer.css
@@ -63,3 +63,30 @@
     height: 3px;
     background: #c7c7c7;
 }
+
+@media(max-width:800px){
+    .footer{
+        gap:20px;
+
+    }
+    .footer-logo{
+        gap:10px;
+        align-items: end;
+    }
+    .footer-logo img{
+        width:40px;
+    }
+    .footer-logo p{
+        font-size: 25px;
+    }
+    .footer-link{
+        font-size: 14px;
+        gap:10px;
+    }
+    .footer-social-icons img{
+        width:22px;
+    }
+    .footer-copy-right{
+        font-size: 13px;
+    }
+}
