--- a/frontend/src/Components/Hero/Hero.css
+++ b/frontend/src/Components/Hero/Hero.css
@@ -62,3 +62,100 @@
 
     
 }
+
+@media(max-width:1280px){
+    .hero-left{
+        padding-left: 100px;
+    }
+    .hero-left h2{
+        font-size: 22px;
+    }
+    .hero-left p{
+        font-size: 60px;
+    }
+    .hero-hand-icon img{
+        width:80px;
+    }
+    .hero-lates-btn{
+        gap:10px;
+        width:250px;
+        height: 60px;
+        margin-top: 20px;
+    }
+    .hero-right img{
+        width:500px;
+    }
+}
+
+@media(max-width:1024px){
+    .hero-left{
+        padding-left: 80px;
+    }
+    .hero-left h2{
+        font-size: 20px;
+    }
+    .hero-left p{
+        font-size: 50px;
+    }
+    .hero-hand-icon img{
+        width:70px;
+    }
+    .hero-lates-btn{
+        width:230px;
+        height: 50px;
+        font-size: 16px;
+    }
+    .hero-right img{
+        width:400px;
+    }
+}
+
+@media(max-width:800px){
+    .hero-left{
+        padding-left: 30px;
+    }
+    .hero-left h2{
+        font-size: 16px;
+    }
+    .hero-left p{
+        font-size: 40px;
+    }
+    .hero-hand-icon img{
+        width:40px;
+    }
+    .hero-lates-btn{
+        gap:10px;
+        width:175px;
+        height: 40px;
+        font-size: 14px;
+    }
+    .hero-right img{
+        width:300px;
+        height: auto;
+    }
+}
+
+@media(max-width:500px){
+   .hero{
+    flex-direction: column-reverse;
+    margin:auto 0px;
+    height:65vh
+   }
+   .hero-right{
+    display:none;
+   }
+   .hero-left h2{
+    font-size: 18px;
+   }
+   .hero-left p{
+    font-size: 50px;
+   }
+   .hero-hand-icon img{
+    width:55px;
+   }
+   .hero-lates-btn{
+    width:200px;
+    height:45px;
+    font-size: 14px;
+   }
+}
