--- a/frontend/src/Components/NewsLetter/NewsLetter.css
+++ b/frontend/src/Components/NewsLetter/NewsLetter.css
@@ -57,3 +57,106 @@
     margin-right: 5px;
     cursor: pointer;
 }
+
+@media(max-width:1280px){
+    .newsletter{
+        padding:0px 80px;
+        margin-bottom: 120px;
+        gap:20px;
+    }
+    .newsletter h1{
+        font-size: 36px;
+    }
+    .newsletter p{
+        font-size: 16px;
+    }
+    .newsletter div{
+        width:600px;
+        height:60px;
+    }
+    .newsletter div input{
+        width:400px;
+    }
+    .newsletter div button{
+        width:160px;
+        height:60px;
+    }
+}
+
+@media(max-width:1024px){
+    .newsletter{
+        margin-bottom: 60px;
+    }
+    .newsletter h1{
+        font-size: 30px;
+    }
+    .newsletter p{
+        font-size: 14px;
+    }
+    .newsletter div{
+        width:500px;
+        height:50px;
+    }
+    .newsletter div input{
+        width:300px;
+        font-size: 14px;
+    }
+    .newsletter div button{
+        width:120px;
+        height:50px;
+        font-size: 14px;
+    }
+}
+
+@media(max-width:800px){
+    .newsletter{
+        margin-bottom: 30px;
+        height: 35vh;
+    }
+    .newsletter h1{
+        font-size: 18px;
+    }
+    .newsletter p{
+        font-size: 12px;
+    }
+    .newsletter div{
+        width:400px;
+        height:40px;
+    }
+    .newsletter div input{
+        width:190px;
+        font-size: 13px;
+    }
+    .newsletter div button{
+        width:100px;
+        height:40px;
+        margin-left: 10px;
+    }
+}
+
+@media(max-width:500px){
+    .newsletter{
+        height: 25vh;
+        width:100%;
+        padding:0;
+        gap:15px;
+    }
+    .newsletter h1{
+        font-size: 16px;
+    }
+    .newsletter p{
+        font-size: 10px;
+    }
+    .newsletter div{
+        width:300px;
+        height:30px;
+    }
+    .newsletter div input{
+        width:100px;
+        font-size: 11px;
+    }
+    .newsletter div button{
+        width:80px;
+        height:30px;
+    }
+}
