--- a/frontend/src/Components/Popular/Popular.css
+++ b/frontend/src/Components/Popular/Popular.css
@@ -25,3 +25,51 @@
     gap:30px;
 } 
 
+@media(max-width:1280px){
+    .popular{
+        height: 70vh;
+    }
+    .popular-item{
+        gap:20px;
+    }
+    .popular-item{
+    margin-top: 30px;
+   }
+}
+@media(max-width:1024px){
+    .popular{
+        height: 60vh;
+    }
+   .popular h1{
+    font-size: 40px;
+   }
+   .popular-item{
+    margin-top: 50px;
+   }
+}
+@media(max-width:800px){
+    .popular{
+        height: 50vh;
+    }
+    .popular h1{
+        font: 35px;;
+    }
+    .popular-item{
+    margin-top: 60px;
+   }
+}
+@media(max-width:500px){
+    .popular{
+        height: 80vh;
+        margin-top: -20%;
+    }
+   
+    .popular h1{
+        font-size: 30px;
+    }
+    .popular-item{
+    display:grid;
+    grid-template-columns: 1fr 1fr;
+    gap:20px;
+   }
+}
