--- a/frontend/src/Pages/CSS/ShopCategory.css
+++ b/frontend/src/Pages/CSS/ShopCategory.css
@@ -26,7 +26,7 @@
     margin:20px 170px;
     display:grid;
     grid-template-columns: repeat(4,1fr);
-    gap: 80px;
+    gap: 40px;
 }
 
 .first-div{
@@ -46,5 +46,60 @@
     background:#ededed;
     color:#787878;
     font-size: 18px;
+    cursor: pointer;
     font-weight: 500;
+}
+@media(max-width:1280px){
+    .shopcategory-banner{
+        margin:20px auto;
+    }
+    .shopcategory-indexSort{
+        width:90%;
+        margin:auto;
+    }
+    .shopcategory-sort{
+        padding:5px 10px;
+        font-size: 12px;;
+    }
+    .shopcategory-indexSort p{
+        font-size: 12px;
+    }
+    .shopcategory-product{
+        width:90%;
+        margin:10px auto;
+        row-gap: 20px;
+    }
+    .shopcategory-product .item{
+        margin:auto;
+    }
+    .shopcategory-loadmore{
+        margin:100px auto;
+        width:200px;
+        height:60px;
+        font-size: 16px;
+    }
+}
+@media(max-width:800px){
+.shopcategory-banner{
+    width:95%;
+}
+.shopcategory-product{
+    display:grid;
+    grid-template-columns: repeat(3,1fr);
+}
+.shopcategory-loadmore{
+    margin:60px auto;
+    width:150px;
+    font-size: 13px;
+    height:40px;
+}
+}
+@media(max-width:500px){
+    .shopcategory-product{
+        display:grid;
+        grid-template-columns: 1fr 1fr;
+    }
+    .shopcategory-sort{
+        width:100px
+    }
 }
