fully responsive frontend part

--- a/frontend/src/Components/CartItems/CartItems.css
+++ b/frontend/src/Components/CartItems/CartItems.css
@@ -117,3 +117,61 @@
     margin:10px;
     margin-bottom: 20px;
 }
+
+@media(max-width:1280px){
+    .cartitems{
+        margin:60px 50px;
+    }
+    .cartitems-format-main{
+        grid-template-columns: 0.5fr 2fr 0.5fr 0.5fr 0.5fr 0.5fr;
+        gap:20px;
+        padding:15px 0px;
+        font-size: 15px;
+    }
+    .carticon-product-icon{
+        height:45px;
+    }
+    .cartitems-remove-icon{
+        margin: auto;
+    }
+    .cartitems-quantity{
+        width:40px;
+        height:30px;
+    }
+    .for-myflex{
+        flex-direction: column;
+        gap:40px;
+        justify-content: start;
+        align-items: start;
+    }
+    .cartitems-total-item{
+        width:100%;
+        flex:1;
+    }
+}
+@media(max-width:800px){
+    .cartitems-promobox{
+        display:flex;
+        max-width: 400px;
+    }
+}
+@media(max-width:500px){
+    .cartitems-format-main{
+        display:none;
+        grid-template-columns: 0.5fr 2fr 0.5fr;
+        gap:10px
+    }
+    .cartitems-format{
+        display:grid;
+    }
+    .cartitems-promobox{
+        width:auto;
+        display:flex;
+        margin:10px;
+        padding:0px;
+    }
+    .cartitems-promobox input{
+        width:auto;
+        font-size: 14px;
+    }
+}
