--- a/frontend/src/Components/ProductDisplay/ProductDisplay.css
+++ b/frontend/src/Components/ProductDisplay/ProductDisplay.css
@@ -143,3 +143,144 @@
         font-size: 14px;
     }
 }
+
+@media(max-width:1024px){
+    .productdisplay{
+        margin: 0px 30px;
+    }
+    .productdisplay-left{
+        gap:5px
+    }
+   
+    .productdisplay-img-list img{
+        height: 80px;
+    }
+    .productdisplay-main-img{
+        height: 350px;
+    }
+  
+    .productdisplay-right h1{
+        font-size: 18px;
+    }
+    .productdisplay-right-star img{
+        width:15px;
+    }
+
+    .productdisplay-right-description{
+        font-size: 12px;
+    }
+    .productdisplay-right-size{
+        margin:10px 0px;
+    }
+  .productdisplay-right-size div{
+        padding:10px 16px;
+        font-size: 12px;
+    }
+    .productdisplay-right button{
+        width: 120px;
+        padding:10px 0px;
+        margin-bottom: 10px;
+        font-size: 14px;
+    }
+    .productdisplay-right-category{
+        font-size: 12px;
+    }
+}
+
+@media(max-width:800px){
+    .productdisplay{
+        margin: 0px 10px;
+    }
+    .productdisplay-left{
+        gap:0px;
+        flex-direction: column-reverse;
+        align-items: center;
+    }
+   .productdisplay-img-list{
+    flex-direction: row;
+    gap:6px;
+   }
+    .productdisplay-img-list img{
+        height: 70px;
+    }
+    .productdisplay-main-img{
+        height: 300px;
+    }
+  
+    .productdisplay-right h1{
+        font-size: 14px;
+    }
+    .productdisplay-right-star img{
+        width:13px;
+    }
+
+    .productdisplay-right-description{
+        font-size: 10px;
+    }
+    .productdisplay-right-size h1{
+        margin:10px 0px;
+    }
+    .productdisplay-right-size{
+        margin:10px;
+        gap:5px;
+    }
+  .productdisplay-right-size div{
+        padding:4px 12px;
+    }
+    .productdisplay-right button{
+        width: 100px;
+        font-size: 12px;
+    }
+    .productdisplay-right-category{
+        font-size: 10px;
+    }
+}
+
+@media(max-width:500px){
+    .productdisplay{
+        flex-direction: column;
+    }
+    .productdisplay-left{
+        gap:10px;
+        flex-direction: row;
+        margin:auto;
+    }
+    .productdisplay-img-list{
+        display:flex;
+        flex-direction: column;
+        gap:8px;
+    }
+    .productdisplay-img-list img{
+        height:75px;
+    }
+    .productdisplay-main-img{
+        height:333px;
+    }
+    .productdisplay-right{
+        margin:5px;
+    }
+    .productdisplay-right h1{
+        margin-top: 15px;
+        font-size: 20px;
+        font-weight: 500;
+    }
+    .productdisplay-right-star img{
+        width:15px;
+    }
+    .productdisplay-right-size{
+        gap:5px;
+        margin:0px; 
+    }
+    .productdisplay-right-size div{
+        padding:10px 16px;
+        font-size: 16px;
+    }
+    .productdisplay-right button{
+        width:130px;
+        font-size: 15px;
+        padding:12px 0px;
+    }
+    .productdisplay-right-category{
+        font-size: 16px;
+    }
+}
