--- a/frontend/src/Components/RelatedProducts/RelatedProducts.css
+++ b/frontend/src/Components/RelatedProducts/RelatedProducts.css
@@ -3,7 +3,7 @@
     flex-direction: column;
     align-items: center;
     gap:10px;
-    height:90vh;
+    margin-bottom: 80px;
   }
   .relatedproducts h1{
     color:#171717;
@@ -22,3 +22,47 @@
     display:flex;
     gap:30px;
   }
+
+  @media(max-width:1280px){
+    .relatedproduct-item{
+        gap:20px;
+    }
+    .relatedproduct-item{
+    margin-top: 30px;
+   }
+}
+@media(max-width:1024px){
+   .relatedproducts h1{
+    font-size: 30px;
+   }
+   .relatedproducts hr{
+    height: 4px;
+   }
+   .relatedproduct-item{
+    margin-top: 50px;
+   }
+}
+@media(max-width:800px){
+    .relatedproducts h1{
+        font: 25px;
+    }
+    .relatedproducts hr{
+      height:3px;
+    }
+    .relatedproduct-item{
+    margin-top: 60px;
+   }
+}
+@media(max-width:500px){
+   .relatedproducts{
+    margin-bottom: 40px;
+   }
+    .relatedproducts h1{
+        font-size: 15px;
+    }
+    .relatedproduct-item{
+    display:grid;
+    grid-template-columns: 1fr 1fr;
+    gap:20px;
+   }
+}
